--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ ul#completed-tasks label {
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.edit-mode input[type=text] {
