--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.header img {
+.header .header__img {
   width: 100%;
 }
 
@@ -133,13 +133,13 @@ li > input[type="text"] {
   width: 226px;
 }
 
-button.delete img {
+.button-delete_icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button-delete_icon:hover {
   transform: rotateZ(0);
 }
 
